--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>portfolio</title>
-    <script src="/dist/build.js"></script>
+    <script src="build.js"></script>
   </head>
   <body>
     <div id="app"></div>
